# cmake-crashpad

./: .gitignore  README.md  build-crashpad.sh
.github/workflows/: build-crashpad.yml
crashpad/lib/: base.lib  based.lib  client.lib  clientd.lib
test/: CMakeLists.txt  main.cpp  widget.cpp  widget.h  widget.ui
